# ogon-channels

./: .gitignore  CMakeLists.txt  README.md
cmake/: EchoTarget.cmake  FindFeature.cmake  FindQT5.cmake  FindXcb.cmake
common/qt/: CMakeLists.txt  ogon-qtrdpchannelserver.pc.in  rdpchannelserver.cpp  rdpsessionnotification.cpp  unixsignalhandler.cpp
doc/: SCOPES.md
example/: CMakeLists.txt  example-channel.cpp  example-channelserver.cpp  example-channelserver.h
include/ogon-channels/: logging.h
include/ogon-channels/qt/: rdpchannelserver.h  rdpclipchannelserver.h  rdpsessionnotification.h  rdpstreambuffer.h  unixsignalhandler.h
packaging/deb/ogon-channels/: .gitignore  changelog  control  copyright  ogon-channels-dev.install  ogon-channels.install  rules
packaging/rpm/: ogon-channels.spec
rdpclip/: .gitignore  CMakeLists.txt
rdpclip/common/: CMakeLists.txt  ogon-qtrdpclipchannelserver.pc.in  rdpclipchannelserver.cpp
rdpclip/x11/: CMakeLists.txt  rdpclip.cpp  rdpx11clipchannelserver.cpp  rdpx11clipchannelserver.h
rdpdr/: .gitignore  CMakeLists.txt  rdpdr.cpp  rdpdrchannelserver.cpp  rdpdrchannelserver.h
